# Learning-OpenGL

./: CMakeLists.txt  Makefile  README.md  setup.sh
cinematics/: generalQuick.txt  grass.txt  grassCin.txt  grassFastCin.txt  grassQuick.txt  newCinematic.txt  noiseGen.txt  terrainCin.txt  terrainPrettyCin.txt  testCin.txt
includes/: buffer.hpp  camera.hpp  cinematic.hpp  debug.hpp  errors.hpp  glad.h  grass.hpp  input.hpp  learning.hpp  light.hpp  manager.hpp  mesh.hpp  object.hpp  rendering.hpp  shader.hpp  shaders.hpp  shape.hpp  terrain.hpp  texture.hpp  time.hpp  trees.hpp  utilities.hpp
shaders/: compute_shader.glsl  default_fragment.glsl  default_vertex.glsl  grass_compute_shader.glsl  grass_fragment.glsl  grass_vertex.glsl  heightmapArrayNormal_compute.glsl  heightmapArray_compute.glsl  heightmap_compute.glsl  heightmap_normal_compute.glsl  instanced_fragment.glsl  instanced_vertex.glsl  occlusion_compute.glsl  screen_quad_fragment.glsl  screen_quad_vertex.glsl  simple_fragment.glsl  simple_vertex.glsl  terrain_fragment.glsl  terrain_fragment_lod.glsl  terrain_shadows_compute.glsl  terrain_vertex.glsl  terrain_vertex_lod.glsl  tesselation_control.glsl  tesselation_evaluation.glsl  tree_fragment.glsl  tree_vertex.glsl  trees_compute_shader.glsl
shaders/includes/: LOD.glsl  culling.glsl  curve.glsl  depth.glsl  functions.glsl  heightmap.glsl  lighting.glsl  noise.glsl  shadow.glsl  transformation.glsl  variables.glsl
sources/: glad.c  grass.cpp  input.cpp  main.cpp  manager.cpp  shader.cpp  terrain.cpp
src/: buffer.cpp  camera.cpp  cinematic.cpp  debug.cpp  errors.cpp  errors.hpp  glad.c  glad_old.c  grass.cpp  input.cpp  learning.h  learning.hpp  main.cpp  manager.cpp  mesh.cpp  mesh.hpp  object.cpp  rendering.cpp  rendering.hpp  shader.cpp  shader.hpp  shaders.cpp  shaders.hpp  shape.cpp  shape.hpp  terrain.cpp  texture.cpp  texture.hpp  time.cpp  trees.cpp  triangle.cpp  triangle.hpp  utilities.cpp  utilities.hpp
